--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body class=".open-sans-normal">
     <header class=" header clr">
 <nav> 
-<h3 class="nav-title">O<span class="tex">v</span>i</h3>
+<h3 class="nav-title">O<span style="color: #FD6E0A;">v</span>i</h3>
 <ul>
 <li><a class="dark-2" href="">Portfolio</a></li>
 <li><a class="dark-2" href="">Blog</a></li>
@@ -26,14 +26,14 @@
 <div class="banner">
 <div class="baner-content">
 <h4 class="banner-greetings dark-2">Hi, I  am</h4>
-<h1 class="banner-title">Ovi Jan</h1>
+<h1 class="banner-title">Ovi Sardar</h1>
 <p class="banner-description">
      Shot what able cold new see hold.Friendly as an betrayed formerly 
 he. Morning because as to society behaved moments.
 </p>
 
-<button class="btn"><i class="fa-solid fa-download"></i>Download CV</button>
-<button class="btn"><i class="fa-solid fa-phone"></i>Contact</button>
+<a href="https://drive.google.com/file/d/1hghDmXoWql5xzmjcuZ6cVbL0v76B6H8R/view?usp=drivesdk" target="_blank"><button class="btn"><i class="fa-solid fa-download"></i>Download CV</button></a>
+<a href="tel:+8801610855006"><button class="btn"><i class="fa-solid fa-phone"></i>Contact</button></a>
 </div>
 
 <img class="banner-image" src="images/ovi.png" alt="">
@@ -180,7 +180,7 @@ commodo ligula eget dolor.</div>
     </div>
     <div class="cv-dwonload">
 
-<button class="btn text-center"> <i class="fa-solid fa-download"></i>Download CV</button>  
+<a href="https://drive.google.com/file/d/1hghDmXoWql5xzmjcuZ6cVbL0v76B6H8R/view?usp=drivesdk" target="_blank"><button class="btn text-center"> <i class="fa-solid fa-download"></i>Download CV</button></a>
     </div>
     
 </section>
@@ -192,9 +192,9 @@ commodo ligula eget dolor.</div>
 <p> Please fill out the form on this section to contact with me or call between 
 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
 <div>
-<a href=""><img src="images/icons/facebook.png"></a>
-<a href=""><img src="images/icons/insta.png"></a>
-<a href=""><img src="images/icons/twitter.png"></a>
+<a href="https://www.facebook.com/ovi.sardar.549" target="_blank"><img src="images/icons/facebook.png"></a>
+<a href="https://www.instagram.com/ovisardar49?igsh=MTlpZG0yem80OTdncA==" target="_blank"><img src="images/icons/insta.png"></a>
+<a href="https://x.com/OviVai192589?s=09" target="_blank"><img src="images/icons/twitter.png"></a>
 
 </div>
 </div>
